added img_url to ranking table

--- a/etl/pokemon_vgc_scraping.ipynb
+++ b/etl/pokemon_vgc_scraping.ipynb
@@ -365,7 +365,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 335/335 [08:38<00:00,  1.55s/it]\n"
+      "100%|██████████| 335/335 [03:38<00:00,  1.53it/s]\n"
      ]
     }
    ],
@@ -1356,7 +1356,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:00<00:00, 449.30it/s]\n"
+      "100%|██████████| 30/30 [00:00<00:00, 899.46it/s]\n"
      ]
     }
    ],
@@ -2056,7 +2056,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "# Access variables\n",
+    "PSQL_USER = os.getenv(\"PSQL_USER\")\n",
+    "PSQL_PASSWORD = os.getenv(\"PSQL_PASSWORD\")\n",
+    "HOST = os.getenv(\"HOST\", \"localhost\")  # Default to 'localhost' if not set\n",
+    "PORT = int(os.getenv(\"PORT\", \"5432\"))     # Default to '5432' if not set\n",
+    "DB_NAME = os.getenv(\"DB_NAME\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {
     "id": "SBnlEvyR0XdT"
    },
@@ -2064,12 +2083,12 @@
    "source": [
     "from sqlalchemy import create_engine\n",
     "\n",
-    "conn = create_engine('postgresql://{PSQL_USER}:{PSQL_PASSWORD}@{HOST}:{PORT}/{DB_NAME}')"
+    "conn = create_engine(f'postgresql://{PSQL_USER}:{PSQL_PASSWORD}@{HOST}:{PORT}/{DB_NAME}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2097,7 @@
        "336"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2089,7 +2108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2098,7 +2117,7 @@
        "25"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2109,7 +2128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2118,7 +2137,7 @@
        "397"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2140,7 +2159,8 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
